fixed the home page not stacking on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,4 +3,5 @@ body {
 }
 .homeContainer {
     margin-top: 2%;
+    font-family: 'Quicksand', sans-serif;
 }
